Fix render when list has a blank item